fix some bugs on mobile

--- a/src/styles/pages--external/main.less
+++ b/src/styles/pages--external/main.less
@@ -284,6 +284,9 @@ body{
   #delivery-map{
     width: 100%;
     height: 445px;
+    @media screen and (max-width: @mobile){
+      display: none;
+    }
   }
   .where{
     margin: 5px 0 10px;
